Bug 159641 - TreeView does not repaint correctly while scrolling with PgUp in kf5/gen
Summary: TreeView does not repaint correctly while scrolling with PgUp in kf5/gen
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: UI (show other bugs)
Version:
(earliest affected)
7.6.4.1 release
Hardware: All All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:24.8.0 target:24.2.1 target:7.6.6
Keywords: bibisected, bisected
Depends on:
Blocks: KDE, KF5
  Show dependency treegraph
 
Reported: 2024-02-08 12:48 UTC by Rafael Lima
Modified: 2024-02-12 09:30 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot showing the problem (176.76 KB, image/png)
2024-02-08 12:48 UTC, Rafael Lima
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Rafael Lima 2024-02-08 12:48:50 UTC
Created attachment 192466 [details]
Screenshot showing the problem

Steps to reproduce

1) Open a dialog that has a TreeView with many items (f.i. in Writer go to Tools - AutoCorrect - AutoCorrect Options; then open the Replace tab)
2) Scroll the treeview down (an easy way to reproduce is to scroll to the last item); click the last item
3) Now start pressing PgUp quickly
4) Notice that the control is not painted correctly; there are seemingly two entries selected (see attached screenshot)

The problem also happens when the penultimate item is selected.

Problem happens in

Version: 7.6.4.1 (X86_64) / LibreOffice Community
Build ID: 60(Build:1)
CPU threads: 16; OS: Linux 6.5; UI render: default; VCL: kf5 (cairo+xcb)
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Ubuntu package version: 4:7.6.4-0ubuntu0.23.10.1
Calc: threaded

Also in

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 34dd150f76a375944ff2bd22dd8535b0fd03b2d5
CPU threads: 16; OS: Linux 6.5; UI render: default; VCL: x11
Locale: pt-BR (pt_BR.UTF-8); UI: en-US
Calc: CL threaded
Comment 1 gladys 2024-02-08 21:12:00 UTC
Hello Rafael,

Thank you for reporting the bug. 

Unfortunately I didnt managed to reproduce in windows verson: 


Version: 7.6.4.1 (X86_64) / LibreOffice Community
Build ID: e19e193f88cd6c0525a17fb7a176ed8e6a3e2aa1
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-GB (en_GB); UI: en-GB
Calc: CL threaded

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: 4d381b54d1c598c181b4a21a8bf0db86eb4668d1
CPU threads: 4; OS: Windows 10.0 Build 19045; UI render: Skia/Raster; VCL: win
Locale: en-GB (en_GB); UI: en-GB
Calc: CL threaded
Comment 2 Michael Weghorn 2024-02-09 07:50:10 UTC
I can reproduce:

Version: 24.8.0.0.alpha0+ (X86_64) / LibreOffice Community
Build ID: ad4a06692b05c4312c1c7c8a8ff38cf12422e692
CPU threads: 12; OS: Linux 6.6; UI render: default; VCL: x11
Locale: en-GB (en_GB.UTF-8); UI: en-US
Calc: threaded

Bibisected with the bibisect-linux-64-6.5 repo using the gen VCL plugin to this commit:

commit be53f32655973c7a18824d5145eed992be788d2f
Author: Noel Grandin
Date:   Thu Mar 12 13:55:55 2020 +0200

    rename vcl::Window::Update to PaintImmediately
    
    To make the code easier to read.
    
    Change-Id: Iebc648150391939fba5d1cd815c72dbcf02ceec6
    Reviewed-on: https://gerrit.libreoffice.org/c/core/+/90378
    Tested-by: Jenkins
    Reviewed-by: Noel Grandin

@Noel: Could you please take a look?
Comment 3 Noel Grandin 2024-02-09 08:56:00 UTC
Fix is https://gerrit.libreoffice.org/c/core/+/163154
Comment 4 Commit Notification 2024-02-09 10:05:34 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/30fb8cde7579fb5da15c1d8da9611198f2f5ce78

tdf#159641 TreeView repaint problem with PgUp in kf5/gen

It will be available in 24.8.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Michael Weghorn 2024-02-09 10:52:08 UTC
Thanks! Fix verified with the Gerrit change from comment 3 earlier.
Comment 6 Commit Notification 2024-02-09 14:56:27 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-24-2":

https://git.libreoffice.org/core/commit/6b7a23022a4d2471df7b458f3ac61c8b768ea896

tdf#159641 TreeView repaint problem with PgUp in kf5/gen

It will be available in 24.2.1.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 Commit Notification 2024-02-12 09:30:12 UTC
Noel Grandin committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/923a590803913e8989e99b5e724d246bedfb8922

tdf#159641 TreeView repaint problem with PgUp in kf5/gen

It will be available in 7.6.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.