tdf#159641 TreeView repaint problem with PgUp in kf5/gen

regression from
    commit be53f32655973c7a18824d5145eed992be788d2f
    Author: Noel Grandin <noel.grandin@collabora.co.uk>
    Date:   Thu Mar 12 13:55:55 2020 +0200
    rename vcl::Window::Update to PaintImmediately

Change-Id: I74fc87e984e1f085d2351cbae033e51920608e3d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163154
Reviewed-by: Michael Weghorn <m.weghorn@posteo.de>
Tested-by: Jenkins
(cherry picked from commit 30fb8cde7579fb5da15c1d8da9611198f2f5ce78)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163149
Reviewed-by: Christian Lohmaier <lohmaier+LibreOffice@googlemail.com>